PROJECT(trickle)

FIND_PACKAGE(KDE4 REQUIRED)
INCLUDE(KDE4Defaults)

SET(TrickleIncludes ${CMAKE_SOURCE_DIR}/libtrickle)

INCLUDE_DIRECTORIES( ${KDE4_INCLUDES} ${QT_INCLUDES} ${TrickleIncludes})

ADD_SUBDIRECTORY(libtrickle)
ADD_SUBDIRECTORY(trickle)
ADD_SUBDIRECTORY(interfaces)
ADD_SUBDIRECTORY(icons)
